change dates in act.ini

--- a/actdocs/conf/act.ini
+++ b/actdocs/conf/act.ini
@@ -1,6 +1,4 @@
-[general]
-full_uri  = http://act.perl-workshop.ch/spw2018/
-languages = en
+[general] full_uri  = http://act.perl-workshop.ch/spw2018/ languages = en
 default_language = en
 default_country  = ch
 name_en   = Swiss Perl Workshop 2018
@@ -26,8 +24,8 @@ notify_accept = 1
 edition_open = 1
 show_schedule = 0
 durations = 5 10 20 40 120
-start_date = 2018-08-24 08:00:00
-end_date   = 2018-08-26 23:00:00
+start_date = 2018-09-07 08:00:00
+end_date   = 2018-09-08 23:00:00
 levels = 4
 
 [levels]
@@ -38,8 +36,8 @@ level4_name_en = Advanced
 
 [rooms]
 rooms = r1 r2 
-r1_name_en = Bouquetin
-r2_name_en = Chamois
+r1_name_en = Aula
+r2_name_en = tbd
 
 [payment]
 open        = 1
