fix config file

--- a/actdocs/conf/act.ini
+++ b/actdocs/conf/act.ini
@@ -1,4 +1,6 @@
-[general] full_uri  = http://act.perl-workshop.ch/spw2018/ languages = en
+[general]
+full_uri  = http://act.perl-workshop.ch/spw2018/
+languages = en
 default_language = en
 default_country  = ch
 name_en   = Swiss Perl Workshop 2018
