--- a/actdocs/conf/act.ini
+++ b/actdocs/conf/act.ini
@@ -16,7 +16,7 @@ max_attendees = 55
 # 1, there really should be a registration price of 0, otherwise users
 # will get the nasty surprise of having to pay for a ticket that was
 # promised "free of charge"...
-gratis = 0
+gratis = 1
 
 [talks]
 submissions_open = 1
@@ -49,44 +49,20 @@ currency    = CHF
 products    = registration sponsor
 
 [product_registration]
-name_en     = Conference ticket
-prices      = 9
+name_en     = Conference ticket (privat attendee, student or speaker)
+prices      = 1
 
 [product_registration_price1]
-name_en     = friday and saturday, normal attendees (corporate)
+name_en     = Free
+amount      = 0
+
+[product_corporate]
+name_en     = Conference ticket (corporate)
+prices      = 1
+
+[product_corporate_price1]
+name_en     = Corporate attendee
 amount      = 200
-
-[product_registration_price2]
-name_en     = friday and saturday, student or speaker
-amount      = 70
-
-[product_registration_price3]
-name_en     = friday and saturday, privately paying
-amount      = 100
-
-[product_registration_price4]
-name_en     = only friday, normal attendees (corporate)
-amount      = 100
-
-[product_registration_price5]
-name_en     = only friday, student or speaker
-amount      = 40
-
-[product_registration_price6]
-name_en     = only friday, privately paying
-amount      = 60
-
-[product_registration_price7]
-name_en     = only saturday, normal attendees (corporate)
-amount      = 100
-
-[product_registration_price8]
-name_en     = only saturday, student or speaker
-amount      = 40
-
-[product_registration_price9]
-name_en     = only saturday, privately paying
-amount      = 60
 
 [product_sponsor]
 name_en     = Sponsor package
