change headers in act.ini

--- a/actdocs/conf/act.ini
+++ b/actdocs/conf/act.ini
@@ -49,18 +49,18 @@ currency    = CHF
 products    = registration sponsor
 
 [product_registration]
-name_en     = Conference ticket (privat attendee, student or speaker)
+name_en     = Conference ticket (private attendee, student or speaker)
 prices      = 1
 
 [product_registration_price1]
 name_en     = Free
 amount      = 0
 
-[product_corporate]
+[product_corp]
 name_en     = Conference ticket (corporate)
 prices      = 1
 
-[product_corporate_price1]
+[product_corp_price1]
 name_en     = Corporate attendee
 amount      = 200
 
