change products in act.ini

--- a/actdocs/conf/act.ini
+++ b/actdocs/conf/act.ini
@@ -46,7 +46,7 @@ open        = 1
 invoices    = 1
 type        = Delayed
 currency    = CHF
-products    = registration sponsor
+products    = registration corporate sponsor
 
 [product_registration]
 name_en     = Conference ticket (private attendee, student or speaker)
@@ -56,11 +56,11 @@ prices      = 1
 name_en     = Free
 amount      = 0
 
-[product_corp]
+[product_corporate]
 name_en     = Conference ticket (corporate)
 prices      = 1
 
-[product_corp_price1]
+[product_corporate_price1]
 name_en     = Corporate attendee
 amount      = 200
 
