refinde wording in act.ini

--- a/actdocs/conf/act.ini
+++ b/actdocs/conf/act.ini
@@ -49,7 +49,7 @@ currency    = CHF
 products    = registration corporate sponsor
 
 [product_registration]
-name_en     = Conference ticket (private attendee, student or speaker)
+name_en     = Free Conference ticket (private attendee, student or speaker)
 prices      = 1
 
 [product_registration_price1]
