change room name

--- a/actdocs/conf/act.ini
+++ b/actdocs/conf/act.ini
@@ -39,7 +39,7 @@ level4_name_en = Advanced
 [rooms]
 rooms = r1 r2 
 r1_name_en = Aula
-r2_name_en = tbd
+r2_name_en = BM116
 
 [payment]
 open        = 1
